Fix overflow for dash container titles

--- a/kit/golden-layout/styles.scss
+++ b/kit/golden-layout/styles.scss
@@ -11,6 +11,7 @@
   background: var(--xh-bg-alt);
 
   .lm_header {
+    display: flex;
     background: rgba(0, 0, 0, 0.06);
 
     .xh-dash-container-add-button {
@@ -23,11 +24,23 @@
       }
     }
 
+    .lm_tabs {
+      flex: 1;
+      position: relative;
+      overflow: hidden;
+      margin-bottom: -1px; // Allows vertical overflow of 1px, without scrollbars
+    }
+
+    .lm_controls {
+      position: relative;
+    }
+
     .lm_tab {
       display: flex;
       align-items: center;
       margin: 2px 0 0 2px;
       padding: 4px 8px;
+      max-width: calc(100% - 25px);
       font-family: var(--xh-font-family);
       font-size: var(--xh-font-size-px);
       line-height: 1;
@@ -51,6 +64,10 @@
         margin-left: var(--xh-pad-half-px);
         position: static;
         background-image: inline-svg('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path fill="#999" d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"/></svg>');
+      }
+
+      .lm_title {
+        white-space: nowrap;
       }
 
       .title-form {
